-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.8.2
-
None
-
blackberry platform
-
f3f695ebcffcb69c0ae643757382442730e8b9d2
In the files src/plugins/platforms/blackberry/qbbabstractvirtualkeyboard.(h|cpp) the QBBAbstractVirtualKeyboard::setHeight(bool height) routine should be taking int height instead.
With the code as it is, the height gets converted to a 1 or 0 so the availableGeometry only changes by one pixel when the keyboard is visible.
Patch is attached.