Fix virtual keyboard setHeight() for Blackberry

Applies to Qt 4.8 only.

Task-number: QTBUG-26160

Change-Id: I4a110ade1f817cc5d9a866e57e1d710abd83d143
Reviewed-by: Kevin Krammer <kevin.krammer@kdab.com>
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>